# solidify

./: Cargo.toml  LICENSE  README.md
src/: camera.rs  main.rs  model.rs  shader.wgsl  surface.rs  texture.rs  vertex.rs  window.rs
