[package]
name = "solidify"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bytemuck = { version = "1.14.0", features = [ "derive" ] }
cgmath = "0.18.0"
env_logger = "0.10.0"
log = "0.4.20"
pollster = "0.3.0"
wgpu = "0.17.1"
winit = "0.28.7"
